--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pylint = "^2.3"
 pyflakes = "^2.1"
 black = "=19.3b0"
 pylint-django = "^2.0"
+pytest = "^4.5"
+psycopg2 = "^2.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
